# cmake

./: CMake实践.pptx
basic/: CMakeLists.txt
basic/demo1/: CMakeLists.txt
basic/demo1/src/: main.cpp
basic/demo2/: CMakeLists.txt
basic/demo2/include/myecho/: echo.h
basic/demo2/include/myprint/: print.h
basic/demo2/src/: main.cpp
basic/demo2/src/myecho/: echo.cpp
basic/demo2/src/myprint/: print.cpp
basic/hello_cmake/: CMakeLists.txt
basic/hello_cmake/src/: main.cpp
env/demo3/: CMakeLists.txt
env/demo3/src/: print.cpp
mix/: CMakeLists.txt
mix/cmake/: build.cmake
mix/src/: main.cpp
